<resources>
    <string name="app_name">Fitness App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="options">Options</string>
    <string name="breakfast_button">Breakfast</string>
    <string name="lunch_button">Lunch</string>
    <string name="dinner_button">Dinner</string>
    <string name="snacks_button">Snacks</string>
    <string name="graphs_button">Graphs</string>
    <string name="Total">Total</string>
    <string name="Calories">Calories</string>
    <string name="Protein">Protein</string>
    <string name="Carbs">Carbs</string>
    <string name="Fat">Fat</string>
    <string name="add_food">Add Food</string>
    <string name="food_eaten">Food Eaten:</string>


    <string-array name="graphs_array">
        <item>Calories Graph</item>
        <item>Gainz graph</item>
        <item>Baguette graph</item>
    </string-array>
    <string name="title_activity_search">SearchActivity</string>

    <string name="app_label">Search</string>
    <string name="search_hint">Search food items</string>

    <string name="menuSearch">Search</string>


    <string-array name="food_array">
        <item>Apple</item>
        <item>Orange</item>
        <item>Chicken (gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
        <item>Eggs (more gainz food)</item>
    </string-array>

    <string-array name="graphTimeArray">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="Exercise_Button">Exercise</string>
    <string name="title_activity_new_graph">Graphs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
