<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kleog.fitnessapp.MealActivity">

    <TextView
        android:id="@+id/totalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/Total"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Calories"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/calorieValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="none"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Protein"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/proteinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="none"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Carbs"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/carbsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="none"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Fat"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/fatValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="none"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/addFoodButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickNotFinished"
        android:text="@string/add_food"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/foodEatenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_eaten"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <ListView
        android:id="@+id/foodList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>